# MyNotes

./: .gitignore  CMakeLists.txt
application/: CMakeLists.txt  main.cpp
application/include/database_gw/: DataBaseConnector.h  DataBaseFacade.h
application/include/interface/: MainWindow.h  NotesWindow.h  WindowManager.h
application/include/kernel/: EventAnalyzer.h  EventDispatcher.h  EventManager.h
application/src/database_gw/: DataBaseConnector.cpp  DataBaseFacade.cpp
application/src/interface/: MainWindow.cpp  NotesWindow.cpp  WindowManager.cpp
application/src/kernel/: EventAnalyzer.cpp  EventDispatcher.cpp  EventManager.cpp
doc/: GUI.drawio  architecture.drawio
